# rocky-tracker

./: .gitignore  AGENTS.md  Rocky Tracker Dev.lnk  build-and-run.ps1  index.html  launch-dev.bat  launch-dev.ps1  package-lock.json  package.json  run-dev.bat  server.js  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
LLM/: INSTRUCTIONS.md  STRUCTURE.md  TRACKER.md
data/: rocky.json
public/: manifest.webmanifest  sw.js
scripts/: ensure-icon.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: append_log.toml  load_data.toml  save_data.toml
src-tauri/src/: main.rs
src/components/: AppHeader.tsx  DiaryEntryModal.tsx  MonthScroller.tsx  SaveIndicator.tsx
src/lib/: dates.ts  idb.ts  sampleData.ts  stats.ts  storage.ts  tauri.ts  types.ts  validate.ts
src/lib/ui/: tokens.ts
src/views/: DiaryView.tsx  GoalView.tsx  HabitView.tsx
