[package]
name = "rocky-tracker"
version = "0.1.0"
description = "Rocky Tracker Desktop (Tauri)"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[features]
default = ["custom-protocol"]
custom-protocol = []
